[package]
name = "koto"
version = "1.1.0"
authors = ["t-sin <shinichi.tanaka45@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
tapirus = { git = "https://github.com/t-sin/tapirus", version = "1.0.4" }
clap = "2.33.0"
fuse = "0.3.1"
libc = "0.2.62"
signal-hook = "0.1.13"
time = "0.1.42"
users = "0.9.1"
